# charm-guide

./: .gitreview  .zuul.yaml  HACKING.rst  README.md  README.rst  bindep.txt  rebuild  requirements.txt  setup.cfg  tox.ini
doc/source/: 1610.rst  1702.rst  1708.rst  1711.rst  1802.rst  1805.rst  1808.rst  1811.rst  1904.rst  1907.rst  1910.rst  2002.rst  2005.rst  2008.rst  2010.rst  2101.rst  2103_Trilio.rst  2104.rst  2110.rst  backport-policy.rst  charm-anatomy.rst  charm-release.rst  charm-store.rst  charms-and-bundles.rst  coding-guidelines.rst  community.rst  conf.py  contents.rst  creating-charms.rst  deployment.rst  dubious_words.txt  feature-specification.rst  find-us.rst  getting-started.rst  how-to-contribute.rst  index.rst  mailing-list.rst  making-a-change.rst  meetings.rst  new-api-charm.rst  (+21 more)
doc/source/_extra/: .htaccess
doc/source/_spelling/: spelling_initial_seeding.txt
doc/source/admin/: deferred-events.rst  ha.rst  index.rst  instance-ha.rst  managing-power-events-juju-status.rst  managing-power-events-topology.rst  managing-power-events.rst  ops-auto-glance-image-updates.rst  ops-change-keystone-password.rst  ops-cloud-admin-access.rst  ops-config-tls-vault-api.rst  ops-implement-ha-with-vip.rst  ops-live-migrate-routers.rst  ops-live-migrate-vms.rst  ops-reissue-tls-certs.rst  ops-remove-mysql8-node.rst  ops-repair-rabbitmq-node.rst  ops-replace-control-plane-service-ha.rst  ops-replace-hyperconverged-compute-node.rst  ops-replace-rabbitmq-node.rst  ops-replace-vault-node.rst  ops-scale-back-nova-compute.rst  (+13 more)
doc/test/: redirect-tests.txt
(+173 files in other folders)
